--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Wine Store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd dist && http-server -a localhost -p 3000 -P http://localhost:3000?",
+    "build": "webpack",
+    "watch": "webpack --watch"
+
   },
   "repository": {
     "type": "git",
@@ -21,5 +25,12 @@
     "lit-html": "^2.2.7",
     "page": "^1.11.6",
     "path-to-regexp": "^1.2.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
