--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "cd dist && http-server -a localhost -p 3000 -P http://localhost:3000?",
     "build": "webpack",
     "watch": "webpack --watch"
-
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,7 @@
   },
   "homepage": "https://github.com/Koteterov/WineStore#readme",
   "dependencies": {
+    "firebase-tools": "^11.8.0",
     "isarray": "^0.0.1",
     "lit-html": "^2.2.7",
     "page": "^1.11.6",
